# monty

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  plan-todo.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
benches/: main.rs
crates/fuzz/fuzz_targets/: string_input_panic.rs  tokens_input_panic.rs
crates/monty/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-js/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/monty-js/__test__/: index.spec.ts  print.spec.ts
crates/monty-js/src/: lib.rs  monty_cls.rs
crates/monty-python/: Cargo.toml  README.md  monty.pyi  pyproject.toml
crates/monty-python/python/pydantic_monty/: __init__.py  _monty.pyi
crates/monty-python/src/: exceptions.rs  lib.rs  limits.rs  monty_cls.rs
crates/monty-python/tests/: test_async.py  test_basic.py  test_dataclasses.py  test_external.py  test_limits.py  test_print.py  test_serialize.py  test_start.py  test_threading.py  test_type_check.py  test_types.py
crates/monty-type-checking/src/: type_check.rs
crates/monty/src/: args.rs  exception_private.rs  heap.rs  heap_data.rs  lib.rs  object.rs  repl.rs  run.rs  (+4 more)
src/: args.rs  bin.rs  builtins.rs  callable.rs  evaluate.rs  exceptions.rs  expressions.rs  function.rs  heap.rs  lib.rs  literal.rs  main.rs  object.rs  object_types.rs  parse.rs  parse_error.rs  prepare.rs  run.rs  types.rs  value.rs
src/values/: bytes.rs  dict.rs  list.rs  py_trait.rs  str.rs  tuple.rs
tests/: datatest_runner.rs  inputs.rs  main.rs  py_object.rs  try_from.rs
(+52 files in other folders)
